--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@
             <div class="column1">
                 <div class="discordbutton">
                     <form action="https://discord.gg/horizons" target="_blank">
-                        <input type="submit" class= "button" value="DISCORD" />
+                        <input type="submit" class= "button1" value="DISCORD" />
                     </form>
                 </div>
             </div>
             <div class="column2">
                 <div class="vipbutton">
                     <form action="https://discord.gg/horizons" target="_blank">
-                        <input type="submit" class= "button" value="VIP" />
+                        <input type="submit" class= "button2" value="VIP" />
                     </form>
                 </div>
             </div>
