--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,17 @@
                 <a href="shop.com" target="_blank"><strong>SHOP</strong></a>
             </div>
         </div>
+        <div class="main-section">
+            <div class="logo">
+                <img src="img/logo.png" alt="arcticlogo" style="width:300px">
+            </div>
+            <div class="arctic-h1">
+                <h1>ARCTIC</h1>
+            </div>
+            <div class="rust-h1">
+                <h1>RUST</h1>
+            </div>
+        </div>
         <div class="quicklinks">
             <div class="column1">
                 <div class="discordbutton">
@@ -34,14 +45,15 @@
                 </div>
             </div>
         </div>
-<!--
         <div class="server-container">
-            <div class="server1 servers">1</div>
-            <div class="server2 servers">2</div>
-            <div class="server3 servers">3</div>
-            <div class="server4 servers">4</div>
-            <div class="server5 servers">5</div>
-        </div>-->
+            <div class="servers">
+                <div class="server1">1</div>
+                <div class="server2">2</div>
+                <div class="server3">3</div>
+                <div class="server4">4</div>
+                <div class="server5">5</div>
+            </div>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
