--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,28 @@
         </div>
         <div class="server-container">
             <div class="servers">
-                <div class="server1">1</div>
-                <div class="server2">2</div>
-                <div class="server3">3</div>
-                <div class="server4">4</div>
-                <div class="server5">5</div>
+                <div class="server1 servers">
+                    <div class="server1-h1">
+                        <h2>[US] Rust Server 1</h2>
+                    </div>
+                    <div class="server1-status">
+                        <p>Online</p>
+                    </div>
+                    <div class="server1-ip">
+                        <p>Server IP: arctic.us:28015</p>
+                    </div>
+                    <div class="server1-ms">
+                        <p>Map Size: 3500</p>
+                    </div>
+                    <div class="server1-wp">
+                        <p>Wipe: Thursday & Sunday (12AM ET)</p>
+                    </div>
+                    <div class="server1-btn">
+                        <form action="https://discord.gg/horizons" target="_blank">
+                            <input type="submit" class= "s1-btn" value="Connect" />
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="" async defer></script>
