--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,14 @@
                 </div>
             </div>
         </div>
-        <div class="server-container">
+        <div class="server-container" id="servers">
             <div class="servers">
+                <div class="servers-title">
+                    <h1>SERVERS</h1>
+                </div>
+                <div class="servers-ls">
+                    <p>Live Stats</p>
+                </div>
                 <div class="server1 servers">
                     <div class="server1-h1">
                         <h2>[US] Rust Server 1</h2>
