--- a/public/index.html
+++ b/public/index.html
@@ -32,15 +32,15 @@
         <div class="quicklinks">
             <div class="column1">
                 <div class="discordbutton">
-                    <form action="https://discord.gg/horizons" target="_blank">
+                    <form action="https://discord.gg/d749bwRrUG" target="_blank">
                         <input type="submit" class= "button1" value="DISCORD" />
                     </form>
                 </div>
             </div>
             <div class="column2">
-                <div class="vipbutton">
-                    <form action="https://discord.gg/horizons" target="_blank">
-                        <input type="submit" class= "button2" value="VIP" />
+                <div class="steambutton">
+                    <form action="https://steamcommunity.com/groups/arcticrustofficial" target="_blank">
+                        <input type="submit" class= "button2" value="STEAM" />
                     </form>
                 </div>
             </div>
@@ -55,13 +55,13 @@
                 </div>
                 <div class="server1 servers">
                     <div class="server1-h1">
-                        <h2>[US] Rust Server 1</h2>
+                        <h2>[AU] Rust Server 1</h2>
                     </div>
                     <div class="server1-status">
                         <p>Online</p>
                     </div>
                     <div class="server1-ip">
-                        <p>Server IP: arctic.us:28015</p>
+                        <p>Server IP: arctic.au:28015</p>
                     </div>
                     <div class="server1-ms">
                         <p>Map Size: 3500</p>
