--- a/public/index.html
+++ b/public/index.html
@@ -61,16 +61,16 @@
                         <p>Online</p>
                     </div>
                     <div class="server1-ip">
-                        <p>Server IP: arctic.au:28015</p>
+                        <p>Server IP: 103.193.80.81:28025</p>
                     </div>
                     <div class="server1-ms">
                         <p>Map Size: 3500</p>
                     </div>
                     <div class="server1-wp">
-                        <p>Wipe: Thursday & Sunday (12AM ET)</p>
+                        <p>Wipe: Thursday & Sunday (12AM AEST)</p>
                     </div>
                     <div class="server1-btn">
-                        <form action="https://discord.gg/horizons" target="_blank">
+                        <form action="steam://connect/103.193.80.81:28025" target="_blank">
                             <input type="submit" class= "s1-btn" value="Connect" />
                         </form>
                     </div>
