--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="main-section">
             <div class="logo">
-                <img src="img/logo.png" alt="arcticlogo" style="width:300px">
+                <img src="img/logo.png" alt="arcticlogo" class="logo">
             </div>
             <div class="arctic-h1">
                 <h1>ARCTIC</h1>
