--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,16 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <div class="copyright">
+                <p>&copy; <strong>ARCTIC</strong>. All Rights Reserved</p>
+            </div>
+            <div class="policy-btn">
+                <form action="https://steamcommunity.com/groups/arcticrustofficial" target="_blank">
+                    <input type="submit" class= "button3" value="Private Policy" />
+                </form>
+            </div>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
