--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <title>Arctic Website</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="img/favicon.png" rel="icon">
+        <link href="img/icon.png" rel="icon">
         <link rel="stylesheet" href="css/index.css">
         <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <script src="https://api.rust-servers.info/embed.js?id=6121"></script>
