--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <div class="quicklinks">
             <div class="column1">
                 <div class="discordbutton">
-                    <form action="https://discord.gg/d749bwRrUG" target="_blank">
+                    <form action="https://discord.gg/ArcticRust" target="_blank">
                         <input type="submit" class= "button1" value="DISCORD" />
                     </form>
                 </div>
@@ -60,7 +60,7 @@
                         <h2>[AU/NZ] Arctic Main</h2>
                     </div>
                     <div class="server1-status">
-                        <p><script>document.write(is_online);</script> - 1/0</p>
+                        <p><script>document.write(is_online);</script>Online</p>
                     </div>
                     <div class="server1-players">
                         <p>| <script>document.write(players_cur);</script> / <script>document.write(players_max);</script> Players</p>
@@ -75,7 +75,7 @@
                         <p>Map Size: <script>document.write(map_size);</script></p>
                     </div>
                     <div class="server1-wp">
-                        <p>Wipe: Thursday & Sunday (12AM AEST)</p>
+                        <p>Wipe: <script>document.write(wipe_cycle);</script></p>
                     </div>
                     <div class="server1-rating">
                         <p>Rating: <script>document.write(rating);</script></p>
