shop linked & scrollbar gone and quick css fixes

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <div class="header-center">
                 <a class="active" href="index.html"><strong>HOME</strong></a>
                 <a href="#servers"><strong>SERVERS</strong></a>
-                <a href="shop.arcticrust.co" target="_blank"><strong>SHOP</strong></a>
+                <a href="https://arcticrust.tebex.io/" target="_blank"><strong>SHOP</strong></a>
             </div>
         </div>
         <div class="main-section">
