--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
                     <img src="img/logo.png" alt="arcticlogo" class="logo">
                 </div>
                 <div class="arcticrust">
-                    <span><h1>ARCTIC</h1><h1 style="color:#74c0ff">RUST</h1></span>
+                    <div class="arctich1">
+                        <h1>ARCTIC</h1>
+                    </div>
+                    <div class="rusth1">
+                        <h1>RUST</h1>
+                    </div>
                 </div>
         </div>
         <div class="quicklinks">
