--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,8 @@
                             <p>Map Size: <script>document.write(map_size);</script></p>
                         </div>
                         <div class="server1-wp">
-                            <p>Wipe: Weekly (Sunday's 12AM AEST)</p>
+                            <p>Wipe: Tuesday 3:30PM AEST</p>
+                            <p>& Friday 5:30pm AEST</p>
                         </div>
                         <div class="server1-btn">
                             <form action="steam://connect/103.193.80.81:28025" target="_blank">
