fix directory in code

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
         <meta name="author" content="Mommers Co">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="img/icon.png" rel="icon">
-        <link rel="stylesheet" href="css/index.css">
+        <link href="icon.png" rel="icon">
+        <link rel="stylesheet" href="index.css">
         <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <script src="https://api.rust-servers.info/embed.js?id=6121"></script>
     </head>
